@@ -5,6 +5,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Add option to hide the map on the contact detail view. [mbaechtold]
+
 - Add option to hide the memberships on the contact detail view. [mbaechtold]
 
 - Inplace migrators for migrating from egov.contactdirectory. [jone]
